/* =====lto====lto====lto====lto====lto====lto====lto====lto====lto====lto===lto====lto====
 *
 * This is a fork by Liquid Leasing Network of Plukkie's version of the LPoSDistributor
 * Many thanks to the version of Plukkie, and the original version of Marc Jansen and the fork of W0utje.
 *
 * You can lease to '3JqGGBMvkMtQQqNhGVD6knEzhncb55Y7JJ5'
 *
 * Thank you and Enjoy!
 *
/* =====lto====lto====lto====lto====lto====lto====lto====lto====lto====lto===lto====lto====

================================================================================================================
 * V1.0.0
 * Liquid Leasing Network - LTO_LPoSDistributor
 *
 * CHANGES
 * - Removed all 'Waves' and 'MRT' references
 * - Changed all scripts to work with LTO
 * - Rewrote some instructions
 * - Rewrote changelog
 * - Rewrote readme
 *
 * ================================================================================================================= */
